# featherbar

./: Cargo.toml  README.md
scripts/: bundle.sh
src/: login_item.rs  main.rs  two_line.rs
